--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@react-navigation/native-stack": "^6.6.2",
     "@react-navigation/stack": "^6.2.1",
     "expo": "~45.0.0",
+    "expo-image-picker": "^13.1.1",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.6.11",
+    "nanoid": "^4.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.1.0",
