--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-easy-grid": "^0.2.2",
+    "react-native-get-random-values": "^1.8.0",
+    "react-native-gifted-chat": "^1.0.2",
+    "react-native-image-view": "^2.1.9",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
