--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/comfortaa": "^0.2.2",
+    "@react-native-community/datetimepicker": "6.1.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
@@ -24,6 +25,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-date-picker": "^4.2.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-easy-grid": "^0.2.2",
     "react-native-get-random-values": "^1.8.0",
@@ -33,6 +35,7 @@
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7"
   },
