--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/comfortaa": "^0.2.2",
     "@react-native-community/datetimepicker": "6.1.2",
+    "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
@@ -25,6 +26,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-actions-sheet-picker": "^0.3.4",
     "react-native-date-picker": "^4.2.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-easy-grid": "^0.2.2",
@@ -32,6 +34,7 @@
     "react-native-gifted-chat": "^1.0.2",
     "react-native-image-view": "^2.1.9",
     "react-native-image-viewing": "^0.2.2",
+    "react-native-picker-select": "^8.0.4",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
