--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
   },
   "dependencies": {
     "@expo-google-fonts/comfortaa": "^0.2.2",
@@ -15,29 +16,56 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@react-navigation/stack": "^6.2.1",
+    "algoliasearch": "^4.13.1",
     "expo": "~45.0.0",
     "expo-app-loading": "^2.0.0",
     "expo-image-picker": "^13.1.1",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.2",
     "firebase": "^9.6.11",
     "nanoid": "^4.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-instantsearch-dom": "^6.30.0",
+    "react-instantsearch-hooks": "^6.30.0",
+    "react-instantsearch-native": "^6.30.0",
     "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-easy-grid": "^0.2.2",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-get-random-values": "^1.8.0",
     "react-native-gifted-chat": "^1.0.2",
     "react-native-image-view": "^2.1.9",
     "react-native-image-viewing": "^0.2.2",
     "react-native-raw-bottom-sheet": "^2.2.0",
+    "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@testing-library/react-native": "^10.1.1",
+    "jest": "^28.1.3",
+    "react-test-renderer": "^17.0.2"
   },
-  "private": true
+  "jest": {
+    "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!@react-native|react-native)"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|ico|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/mocks/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/mocks/fileMock.js"
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  }
 }
